# docker_streamlit

./: .gitignore  Dockerfile  README.md  pyproject.toml
docker_streamlit/: main.py
